--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -400,6 +400,7 @@
     <Compile Include="Reportes\RRHH\ROL_020_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_021_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_022_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_023_Info.cs" />
     <Compile Include="RRHH\MTE\ro_archivosCSV_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\RDEP\Rdep_Info.cs" />
