--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Facturacion\fa_factura_det_Info.cs" />
     <Compile Include="Facturacion\fa_factura_det_x_in_Ing_Egr_Inven_det_Info.cs" />
     <Compile Include="Facturacion\fa_factura_Info.cs" />
+    <Compile Include="Facturacion\fa_factura_resumen_Info.cs" />
     <Compile Include="Facturacion\fa_factura_x_fa_guia_remision_Info.cs" />
     <Compile Include="Facturacion\fa_formaPago_Info.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Info.cs" />
