--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Reportes\Inventario\INV_012_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_013_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_014_Bus.cs" />
+    <Compile Include="Reportes\Inventario\INV_015_Bus.cs" />
     <Compile Include="Reportes\Presupuesto\PRE_001_Bus.cs" />
     <Compile Include="Reportes\Produccion\PRO_001_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Bus.cs" />
