--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10150,6 +10150,9 @@
     <EmbeddedResource Include="Reportes\Facturacion\FAC_013_Rpt.resx">
       <DependentUpon>FAC_013_Rpt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_014_Rpt.resx">
+      <DependentUpon>FAC_014_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Importacion\IMP_002_gastos_Rpt.resx">
       <DependentUpon>IMP_002_gastos_Rpt.cs</DependentUpon>
     </EmbeddedResource>
