--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1090,6 +1090,12 @@
     <Compile Include="Reportes\RRHH\ROL_002_Ingresos.Designer.cs">
       <DependentUpon>ROL_002_Ingresos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RRHH\ROL_002_RolPago.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\RRHH\ROL_002_RolPago.Designer.cs">
+      <DependentUpon>ROL_002_RolPago.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\RRHH\ROL_019_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10217,6 +10223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_002_Ingresos.resx">
       <DependentUpon>ROL_002_Ingresos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_002_RolPago.resx">
+      <DependentUpon>ROL_002_RolPago.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_019_Rpt.resx">
       <DependentUpon>ROL_019_Rpt.cs</DependentUpon>
