--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2267,6 +2267,9 @@
     <Compile Include="vwin_Transferencias.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_transferencia_x_in_movi_inve_agrupada_para_recosteo.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="VWPRE_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
