--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9828,6 +9828,7 @@
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_008.cshtml" />
     <Content Include="Areas\Inventario\Views\AuditoriaInventario\Index.cshtml" />
     <Content Include="Areas\Inventario\Views\AuditoriaInventario\_GridViewPartial_RecosteoInventario.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_009.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -10001,6 +10002,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_008_Rpt.resx">
       <DependentUpon>BAN_008_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_009_Rpt.resx">
+      <DependentUpon>BAN_009_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
