--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2250,6 +2250,9 @@
     <Compile Include="vwin_Ing_Egr_Inven_por_devolver.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_movi_inve_x_estado_contabilizacion.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwin_Producto_Composicion.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
