--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1259,6 +1259,7 @@
     <Compile Include="Reportes\RRHH\ROL_021_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_022_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_023_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_024_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -2365,6 +2366,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWROL_022.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWROL_024.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="vwRo_ActaFiniquito.cs">
