--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2272,6 +2272,9 @@
     <Compile Include="vwin_Producto_Stock.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_producto_x_tb_bodega.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwin_producto_x_tb_bodega_Costo_Historico.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
