--- a/ERP/Core.Erp.Data/App.Config
+++ b/ERP/Core.Erp.Data/App.Config
@@ -25,8 +25,7 @@
     <add name="Entities_presupuesto" connectionString="metadata=res://*/Model_presupuesto.csdl|res://*/Model_presupuesto.ssdl|res://*/Model_presupuesto.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.29\SQL2014;initial catalog=DBERP;persist security info=True;user id=sa;password=Sysadm753;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_produccion" connectionString="metadata=res://*/Model_produccion.csdl|res://*/Model_produccion.ssdl|res://*/Model_produccion.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.29\SQL2014;initial catalog=DBERP;persist security info=True;user id=sa;password=Sysadm753;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entity_Eventos" connectionString="metadata=res://*/Model_migraciones.csdl|res://*/Model_migraciones.ssdl|res://*/Model_migraciones.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.3;initial catalog=DBEVENTOS;persist security info=True;user id=sa;password=Sysadm23577;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  
-  </connectionStrings>
+    <add name="DBSACEntities" connectionString="metadata=res://*/Model_ImportacionDiarios.csdl|res://*/Model_ImportacionDiarios.ssdl|res://*/Model_ImportacionDiarios.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.29;initial catalog=DBSAC;persist security info=True;user id=sa;password=sysadm01*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
