--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2473,6 +2473,9 @@
     <Compile Include="vwro_rol.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwro_rol_detalle.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwro_rol_detalle_generar_op.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
