--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9850,6 +9850,7 @@
     <Content Include="Areas\RRHH\Views\ParametrosContable\_CmbNomina.cshtml" />
     <Content Include="Areas\Contabilidad\Views\ImportacionDiarios\Index.cshtml" />
     <Content Include="Areas\Contabilidad\Views\ImportacionDiarios\_GridViewPartial_ImportacionDiarios.cshtml" />
+    <Content Include="Areas\RRHH\Views\ParametrosContable\_CmbCuenta_sueldo_x_pagar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
